--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -1370,10 +1370,26 @@ footer {
             width: 20rem;
           }
         }
+        .cta-button {
+          a {
+            font-size: 1rem;
+          }
+        }
       }
       .wide {
         section{
           width: 20rem;
+        }
+      }
+      aside {
+        menu {
+  
+          li {
+            a {
+              font-size: $md;
+            }
+  
+          }
         }
       }
     }
