--- a/css/main.css
+++ b/css/main.css
@@ -1075,6 +1075,12 @@ footer menu a {
   main .txt-style-wrapper {
     flex-direction: column;
   }
+  main .txt-style-wrapper > p {
+    padding-inline: 4rem;
+  }
+  main .txt-style-wrapper p:first-child, main .txt-style-wrapper p:last-child {
+    padding-block: 4rem;
+  }
   main .txt-style-wrapper p span {
     display: block;
     max-width: 24em;
