--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -1225,7 +1225,7 @@ footer {
       padding: 4rem;
       z-index: 2;
       border-top: 0.1em solid $grey;
-      background-image: linear-gradient(90deg, #ffffff66, $white), url('../../img/dots.svg');
+      background-image: linear-gradient(90deg, #ffffff66, $white), url('https://raw.githubusercontent.com/icscreative/scd/6a274db1b311e023701fe68e1abade8cde822cf9/img/dots.svg');
       background-repeat: no-repeat;
       background-size: cover;
       background-position: 0, -24rem;
