--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -122,7 +122,10 @@ nav#light-mode {
       a {
         color: $black;
       }
-
+      a:hover,
+      a:focus {
+        color: $dodger;
+      }
       button {
         color: $black;
 
@@ -300,6 +303,7 @@ nav {
           align-items: center;
           white-space: nowrap;
           gap: 0.4rem;
+          transition: color ease-in-out 0.2s;
         }
 
         h2:after {
@@ -405,8 +409,12 @@ nav {
           display: flex;
           flex-direction: column;
           flex-wrap: nowrap;
+          
         }
-
+        a:hover,
+        a:focus {
+          color: $dodger;
+        }
         >a {
           border-bottom: 0.1rem solid $grey;
           display: flex;
@@ -1026,6 +1034,11 @@ footer {
       color: $darkgrey;
       letter-spacing: 0.01em;
       line-height: 1.5;
+      transition: color ease-in-out 0.2s;
+    }
+    a:hover,
+    a:focus {
+      color: $yellow;
     }
   }
 }
@@ -1184,7 +1197,7 @@ footer {
         padding: 1rem 0.75rem;
         cursor: pointer;
         span {
-          flex-basis: 0.1rem;
+          flex-basis: 0.11rem;
           width: 100%;
           background-color: $black;
           transition: all ease-in-out 0.2s;
@@ -1242,7 +1255,11 @@ footer {
             content: none;
           }
         }
-
+        button:hover {
+          h2 {
+            color: $dodger;
+          }
+        }
         button:hover+section {
           opacity: 0;
           height: 0;
@@ -1480,6 +1497,7 @@ footer {
     }
     menu {
       gap: 1rem;
+
     }
     .hamburger {
       button {
